# ambitious

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  README.md
.beads/: beads.jsonl
.github/workflows/: ci.yml
crates/ambitious/: Cargo.toml
crates/ambitious-macros/: Cargo.toml
crates/ambitious-macros/src/: lib.rs
crates/ambitious-macros/tests/: derive_test.rs
crates/ambitious/src/: lib.rs  message.rs  node.rs  registry.rs
crates/ambitious/src/application/: core.rs  mod.rs
crates/ambitious/src/atom/: mod.rs
crates/ambitious/src/channel/: core.rs  mod.rs  transport.rs  websocket.rs
crates/ambitious/src/core/: etf.rs  exit_reason.rs  message.rs  mod.rs  node.rs  pid.rs  process_flag.rs  reference.rs  system_message.rs
crates/ambitious/src/distribution/: discovery.rs  erlang.rs  global.rs  manager.rs  mod.rs  monitor.rs  node.rs  pg.rs  process_monitor.rs  protocol.rs  spawn.rs  tcp_transport.rs  tests.rs  traits.rs  transport.rs
crates/ambitious/src/gen_fsm/: mod.rs
crates/ambitious/src/gen_server/: dispatch.rs  mod.rs  protocol.rs  server.rs  server_ref.rs  traits.rs  types.rs  via.rs
crates/ambitious/src/gen_server/v2/: dispatch.rs  mod.rs  protocol.rs  server.rs  traits.rs  types.rs
crates/ambitious/src/gen_server/v3/: mod.rs  server.rs  traits.rs
crates/ambitious/src/peer/: core.rs  mod.rs  options.rs
crates/ambitious/src/presence/: crdt.rs  mod.rs  server.rs  server_v3.rs  types.rs
crates/ambitious/src/process/: global.rs  mod.rs  runtime.rs  spawn.rs
crates/ambitious/src/pubsub/: mod.rs  server.rs  server_v3.rs
crates/ambitious/src/runtime/: context.rs  error.rs  mod.rs  registry.rs  task_local.rs
crates/ambitious/src/store/: mod.rs  registry.rs
crates/ambitious/src/supervisor/: core.rs  dynamic_supervisor.rs  mod.rs  types.rs
crates/ambitious/src/timer/: mod.rs
crates/ambitious/tests/: erlang_interop_test.rs
crates/ambitious/tests/elixir_interop/: test_server.exs
crates/dream-core/src/: lib.rs  message.rs
crates/dream-gen-server/: Cargo.toml
crates/dream-gen-server/src/: error.rs  lib.rs  protocol.rs  server.rs  types.rs
crates/dream-process/: Cargo.toml
crates/dream-process/src/: lib.rs  runtime.rs  spawn.rs
crates/dream-runtime/src/: context.rs  lib.rs  process_handle.rs  registry.rs  task_local.rs
crates/dream-supervisor/: Cargo.toml
crates/dream-supervisor/src/: dynamic_supervisor.rs  lib.rs  supervisor.rs  types.rs
crates/dream/src/: channel.rs  lib.rs  presence.rs  registry.rs
crates/starlang/: Cargo.toml
crates/starlang-application/: Cargo.toml
crates/starlang-application/src/: application.rs  lib.rs  types.rs
crates/starlang-atom/: Cargo.toml
crates/starlang-atom/src/: lib.rs
crates/starlang-core/: Cargo.toml
crates/starlang-core/src/: exit_reason.rs  lib.rs  message.rs  node.rs  pid.rs  reference.rs  system_message.rs
crates/starlang-gen-server/: Cargo.toml
crates/starlang-gen-server/src/: error.rs  lib.rs  protocol.rs  server.rs  types.rs
crates/starlang-macros/: Cargo.toml
crates/starlang-macros/src/: lib.rs
crates/starlang-macros/tests/: derive_test.rs
crates/starlang-process/: Cargo.toml
crates/starlang-process/src/: global.rs  lib.rs  runtime.rs  spawn.rs
crates/starlang-runtime/: Cargo.toml
crates/starlang-runtime/src/: context.rs  error.rs  lib.rs  process_handle.rs  registry.rs  task_local.rs
crates/starlang-supervisor/: Cargo.toml
crates/starlang-supervisor/src/: dynamic_supervisor.rs  lib.rs  supervisor.rs  types.rs
crates/starlang/src/: channel.rs  lib.rs  node.rs  presence.rs  registry.rs
crates/starlang/src/channel/: core.rs  mod.rs  websocket.rs
crates/starlang/src/core/: node.rs  pid.rs
crates/starlang/src/distribution/: discovery.rs  global.rs  manager.rs  mod.rs  monitor.rs  node.rs  pg.rs  process_monitor.rs  protocol.rs  transport.rs
crates/starlang/src/gen_server/: mod.rs  protocol.rs  server.rs  types.rs
crates/starlang/src/presence/: mod.rs  server.rs  types.rs
crates/starlang/src/process/: runtime.rs
crates/starlang/src/pubsub/: mod.rs  server.rs
crates/starlang/src/runtime/: process_handle.rs  registry.rs
crates/starlang/src/supervisor/: dynamic_supervisor.rs  mod.rs  supervisor.rs  types.rs
docs/plans/: 2026-02-19-core-correctness-and-ergonomics-design.md  2026-02-19-core-correctness-and-ergonomics-plan.md  2026-02-20-job-queue-example-design.md  2026-02-20-job-queue-example-plan.md
examples/chat/: Cargo.toml  README.md  config.toml
examples/chat/src/: channel.rs  http.rs  lobby.rs  main.rs  protocol.rs  pubsub.rs  registry.rs  room.rs  room_supervisor.rs  server.rs  session.rs
examples/chat/static/: index.html
examples/chat/tests/: distribution_test.rs
examples/job_queue/: Cargo.toml
examples/job_queue/src/: dead_letter.rs  job.rs  main.rs  queue.rs  stats.rs  ui.rs  worker.rs
