[workspace]
resolver = "2"
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Sonny Scroggin <sonny@scrogg.in>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/scrogson/ambitious"
homepage = "https://github.com/scrogson/ambitious"
keywords = ["erlang", "otp", "concurrency", "actor", "distributed"]
categories = ["concurrency", "asynchronous"]

[workspace.dependencies]
# Internal crates
ambitious = { version = "0.1.0", path = "crates/ambitious" }
ambitious-macros = { version = "0.1.0", path = "crates/ambitious-macros" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Concurrent data structures
dashmap = "6"

# Error handling
thiserror = "2.0"

# Testing
tokio-test = "0.4"
