[package]
name = "dream-supervisor"
version = "0.1.0"
edition = "2021"
description = "Supervisor pattern for DREAM"
license = "MIT OR Apache-2.0"

[dependencies]
dream-core = { path = "../dream-core" }
dream-runtime = { path = "../dream-runtime" }
dream-process = { path = "../dream-process" }
dream-gen-server = { path = "../dream-gen-server" }
tokio = { version = "1", features = ["sync", "time", "rt"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
dashmap = "6"
parking_lot = "0.12"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
