[package]
name = "starlang-application"
version = "0.1.0"
edition = "2021"
description = "Application lifecycle management for Starlang"
license = "MIT OR Apache-2.0"

[dependencies]
starlang-core = { version = "0.1.0", path = "../starlang-core" }
starlang-runtime = { version = "0.1.0", path = "../starlang-runtime" }
starlang-process = { version = "0.1.0", path = "../starlang-process" }
starlang-supervisor = { version = "0.1.0", path = "../starlang-supervisor" }
tokio = { version = "1", features = ["sync", "time", "rt"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
