[package]
name = "starlang-macros"
version = "0.1.0"
edition = "2021"
description = "Ergonomic macros for Starlang"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
starlang-core = { path = "../starlang-core" }
starlang-runtime = { path = "../starlang-runtime" }
starlang-process = { path = "../starlang-process" }
starlang-gen-server = { path = "../starlang-gen-server" }
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
