[package]
name = "ambitious-job-queue"
version.workspace = true
edition = "2024"
description = "Job queue / worker pool example using Ambitious"
license.workspace = true
publish = false

[[bin]]
name = "job-queue"
path = "src/main.rs"

[dependencies]
ambitious = { version = "0.1.0", path = "../../crates/ambitious" }

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
rand = "0.9"

# TUI
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
